# nix-templates

./: flake.nix
cpp/: CMakeLists.txt  flake.nix  justfile
default/: flake.nix
python/: .gitignore  flake.nix  pyproject.toml
rust/: .gitignore  flake.nix
zola/: flake.nix
